@@ -64,7 +64,8 @@
     * Added a getmmap to base
     * Added command line scripts fsls, fstree, fscat, fscp, fsmv
     * Added command line scripts fsmkdir, fsmount
-    * Made automatically pick up keys if no other authentication is available
+    * Made SFTP automatically pick up keys if no other authentication is available
     * Optimized listdir and listdirinfo in SFTPFS
     * Made memoryfs work with threads
+    * Added copyfile_non_atomic and movefile_non_atomic for improved performance of multi-threaded copies
 
